nok-git/gitea/gitea-ssh-service.yaml
# Source: gitea/templates/gitea/ssh-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: gitea-ssh
  namespace: nok-git
  labels:
    helm.sh/chart: gitea-12.5.0
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
    app.kubernetes.io/version: "1.25.4"
    version: "1.25.4"
    app.kubernetes.io/managed-by: Helm
spec:
  type: LoadBalancer
  loadBalancerIP: 172.18.0.102
  ports:
  - name: ssh
    port: 22
    targetPort: 2222
    protocol: TCP
  selector:
    app.kubernetes.io/name: gitea
    app.kubernetes.io/instance: gitea
