nok-git/gitea/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nok-gitea-ingress
  namespace: nok-git
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/use-regex: "true"
    netopskube.io/bbm: "true"
    netopskube.io/prober: http
spec:
  ingressClassName: nginx
  rules:
  - host: bng.nok.local # kpt-set: ${ingress-host}
    http:
      paths:
      - path: /gitea(/|$)(.*)
        pathType: ImplementationSpecific
        backend:
          service:
            name: gitea-http
            port:
              number: 3000
